BIG UPDATE 2.6 IS HERE

--- a/src/scss/_entry.scss
+++ b/src/scss/_entry.scss
@@ -128,3 +128,4 @@ div.pagination {
 
 // @import "../../node_modules/slick-carousel/slick/slick.scss";
 // @import "helpers/slick-theme";
+// @import "../../node_modules/animate.css/animate.min.css";
