--- a/src/scss/helpers/_slider.scss
+++ b/src/scss/helpers/_slider.scss
@@ -109,6 +109,7 @@
         &:hover {
           background-color: $primary;
           color: white;
+          text-decoration: none;
         }
         margin-top: 5px;
       }
