--- a/src/scss/helpers/_loader.scss
+++ b/src/scss/helpers/_loader.scss
@@ -25,8 +25,7 @@
 @mixin my-loader(
   $pending-animation-duration: 0.5s,
   $bg-color: #fafafa,
-  $circle-width: 150px,
-  $circle-height: 150px,
+  $circle-diameter: 150px,
   $circle-bg-color: white,
   $ring-after-duration: 1s,
   $ring-after-delay: 0s,
@@ -34,7 +33,8 @@
   $ring-before-delay: 0.2s,
   $done-animation-duration: 0.5s,
   $pending-animation-name: fadeIn,
-  $done-animation-name: fadeOut
+  $done-animation-name: fadeOut,
+  $custom-img-width: null,
 ) {
   &.pending {
     animation-duration: $pending-animation-duration;
@@ -57,13 +57,18 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: $circle-height;
-    width: $circle-width;
+    height: $circle-diameter;
+    width: $circle-diameter;
     border-radius: 100%;
     background: $circle-bg-color;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
     img {
-      width: 100px;
+      @if ($custom-img-width == null) {
+        width: calc(#{$circle-diameter} * 75/100);
+      }
+      @else {
+        width: $custom-img-width;
+      }
     }
     &::after {
       @include rings($ring-after-duration, $ring-after-delay);
