--- a/src/scss/helpers/_helpers.scss
+++ b/src/scss/helpers/_helpers.scss
@@ -28,9 +28,10 @@ section {
   left: 50%;
   transform: translate(-50%, -50%);
   object-fit: cover;
-  min-height: 100%;
+  height: 100%;
   width: 100%;
 }
+
 
 .bg-container {
   position: relative;
