--- a/src/scss/helpers/_slick-theme.scss
+++ b/src/scss/helpers/_slick-theme.scss
@@ -139,8 +139,8 @@
                 li {
                     position: relative;
                     display: inline-block;
-                    height: 20px;
-                    width: 20px;
+                    height: $slick-dot-box-size;
+                    width: $slick-dot-box-size;
                     margin: $slick-margin-bet-dots;
                     padding: 0;
                     cursor: pointer;
