--- a/src/scss/helpers/_contact-form-7.scss
+++ b/src/scss/helpers/_contact-form-7.scss
@@ -19,25 +19,33 @@
     $btns-width: 150px,
     $btns-height: inherit,
     $btns-txt-size: 16px,
-    $btns-border-radius: $field-border-radius,
+    $btns-border-radius: $field-border-radius
 ) {
     .wpcf7-form {
         .form-group {
             margin-bottom: $field-margin-between-rows;
-            @include media('>bootstrap-sm') {
-                &.row-first, &.row-last {
+            @include media(">bootstrap-sm") {
+                &.row-first,
+                &.row-last {
                     width: calc(50% - #{($field-margin-between-cols / 2) + (2 * $field-border-width) + 1});
-                    
+
                     display: inline-block;
                     min-width: 200px;
                 }
-                @include media('>=big-phone') {
+                @include media(">=big-phone") {
                     &.row-first {
-                        @include appDir(margin-right, #{$field-margin-between-cols - (2 * $field-border-width)}, margin-left, $field-margin-between-cols);
+                        @include appDir(
+                            margin-right,
+                            #{$field-margin-between-cols - (2 * $field-border-width)},
+                            margin-left,
+                            $field-margin-between-cols
+                        );
                     }
                 }
             }
-            input, textarea {
+            input,
+            textarea,
+            select {
                 &:not([type="submit"]) {
                     width: $field-width;
                     background: $field-bg;
@@ -51,6 +59,7 @@
                     font-size: $field-font-size;
                     transition: all 0.3s ease-in-out;
                     color: $field-color;
+                    @include appDir(direction, ltr, direction, rtl);
                     @include appDir(text-align, left, text-align, right);
                     &::placeholder {
                         color: $field-placeholder-color;
@@ -59,8 +68,11 @@
                         outline: none;
                         border-color: $primary;
                     }
+                    option {
+                        color: $field-color;
+                    }
                 }
-                &[type=submit] {
+                &[type="submit"] {
                     border-radius: $btns-border-radius;
                     padding: $btns-padding;
                     font-size: $btns-txt-size;
@@ -74,6 +86,29 @@
             }
             textarea {
                 height: $ta-height;
+            }
+            .select-box {
+                width: 100%;
+                border-width: $field-border-width;
+                border-color: $field-border-color;
+                border-style: solid;
+                border-radius: $field-border-radius;
+                position: relative;
+                &::after {
+                    width: 0;
+                    height: 0;
+                    border-left: 7px solid transparent;
+                    border-right: 7px solid transparent;
+                    border-top: 7px solid $field-placeholder-color;
+                    position: absolute;
+                    top: 44%;
+                    @include appDir(right, 1px, left, 1px);
+                    content: "";
+                    z-index: 6;
+                }
+                select {
+                    border: none;
+                }
             }
         }
     }
