fixed direction in contact form 7 mixin

--- a/src/scss/helpers/_contact-form-7.scss
+++ b/src/scss/helpers/_contact-form-7.scss
@@ -22,6 +22,7 @@
     $btns-border-radius: $field-border-radius
 ) {
     .wpcf7-form {
+        @include appDir(direction, ltr, direction, rtl);
         .form-group {
             margin-bottom: $field-margin-between-rows;
             @include media(">bootstrap-sm") {
