--- a/src/scss/helpers/_helpers.scss
+++ b/src/scss/helpers/_helpers.scss
@@ -99,9 +99,9 @@ section {
 }
 
 .line-wv-dashes {
-  background: repeating-linear-gradient(55deg, black, white 1px, white 3px);
+  background: repeating-linear-gradient(-45deg, gray 0px, white 1px, white 8px, gray 9px);
   width: 100%;
-  height: 3px;
+  height: 7px;
 }
 
 .sidebar__inner {
