--- a/src/scss/helpers/_slick-theme.scss
+++ b/src/scss/helpers/_slick-theme.scss
@@ -6,6 +6,7 @@
     $slick-arrow-box-size: 30px,
     $slick-arrow-size: 20px,
     $slick-arrow-font-family: $font-family-base,
+    $slick-arrow-border: none,
     $slick-dot-color: black,
     $slick-dot-color-active: $slick-dot-color,
     $slick-prev-character: "\003C",
@@ -32,12 +33,12 @@
                 height: $slick-arrow-box-size;
                 line-height: 0;
                 font-size: 0;
-                border: 1px solid black;
-                background: white;
+                border: $slick-arrow-border;
+                background: $slick-arrow-color;
                 transition: all 0.5s;
                 opacity: $slick-opacity-default;
                 &::after {
-                    color: $slick-arrow-color;
+                    color: $slick-arrow-shape-color;
                     font-size: $slick-arrow-size;
                     width: 100%;
                     display: flex;
@@ -65,7 +66,8 @@
                 }
                 @include hover-focus-active() {
                     opacity: $slick-opacity-on-hover;
-                    border: 1px solid $primary;
+                    border: $slick-arrow-border;
+                    border-color: $primary;
                     &::after {
                         color: $primary;
                     }
@@ -82,7 +84,7 @@
                 font-size: 0;
                 background: $slick-arrow-color;
                 transition: all 0.5s;
-                border: none;
+                border: $slick-arrow-border;
                 outline: none;
                 opacity: $slick-opacity-default;
                 &::after {
