arrow border color change on hover slick theme

--- a/src/scss/helpers/_slick-theme.scss
+++ b/src/scss/helpers/_slick-theme.scss
@@ -116,6 +116,7 @@
                 }
                 @include hover-focus-active() {
                     opacity: $slick-opacity-on-hover;
+                    border-color: $primary;
                     &::after {
                         color: $primary;
                     }
