--- a/src/scss/helpers/_helpers.scss
+++ b/src/scss/helpers/_helpers.scss
@@ -69,7 +69,6 @@ section {
   width: 100%;
 }
 
-
 .bg-container {
   position: relative;
   overflow: hidden;
@@ -103,8 +102,6 @@ section {
   top: 90px;
 }
 
-
-
 .slick-slide:focus {
   outline: none;
 }
@@ -121,3 +118,41 @@ div.pagination {
 .slick-next {
   z-index: 10;
 }
+
+// -------------------------------------------------- mega menu support --------------------------------------
+
+.navbar .has-megamenu {
+  position: static !important;
+}
+.navbar .has-megamenu .dropdown-menu {
+  left: 0;
+  right: 0;
+  width: 100%;
+  padding: 20px;
+  flex-flow: row wrap;
+  .dropdown-menu {
+    position: static !important;
+    display: flex !important;
+    flex-flow: column;
+  }
+  .megamenu {
+    width: fit-content;
+    display: inline-flex;
+    flex-flow: column;
+    margin-left: 30px;
+    & > .dropdown-item {
+      font-weight: 600;
+    }
+    .dropdown-menu {
+      box-shadow: none;
+      border: none;
+      background-color: transparent;
+      padding: 0;
+      margin-top: 5px;
+      .nav-item {
+        padding: 0;
+      }
+    }
+  }
+}
+// -------------------------------------------------- end megamenu support -----------------------------------------------
