--- a/src/scss/_entry.scss
+++ b/src/scss/_entry.scss
@@ -1,3 +1,4 @@
+@use "sass:meta";
 @import "helpers/helpers.scss";
 
 // .sec-title {
@@ -14,7 +15,6 @@
 //     }
 //   }
 // }
-
 
 // @import "../../node_modules/slick-carousel/slick/slick.scss";
 // @import "helpers/slick-theme";
