quick fix for font family base

--- a/src/scss/_entry.scss
+++ b/src/scss/_entry.scss
@@ -2,6 +2,7 @@
 @use "helpers" as h with (
     $dir: $dir,
     $primary: $primary,
+    $font-family-base: $font-family-base,
 );
 
 // .sec-title {
